# template-task

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  init-repo.sh  tests.cpp  update-repo.sh
.github/workflows/: cpp.yml
ci-extra/: build.sh  check-lines.sh  clang-toolchain.cmake  gnu-toolchain.cmake  linux-clang.cmake  linux-gnu.cmake  set-upstream.sh  test-valgrind.sh  test.sh
cmake/: CompilerWarnings.cmake  ConfigureCompiler.cmake  ConfigureTarget.cmake  ConfigureVcpkg.cmake  FetchVcpkg.cmake
cmake/templates/: toolchain.cmake.in  vcpkg-triplet.cmake.in
cmake/toolchain-templates/: ci.cmake.in  default.cmake.in
test/: .clang-format  dummy-test.cpp  dummy_test.cpp
